first section 'complete'

--- a/accessibility.html
+++ b/accessibility.html
@@ -57,9 +57,88 @@ URL: https://code.google.com/p/io-2012-slides
     </article>
   </slide>
 
+  <slide class="segue dark nobackground">
+    <hgroup class="auto-fadein">
+      <h2>Legal Responsibility</h2>
+      <h3>Section 508</h3>
+    </hgroup>
+  </slide>
+  
   <slide>
     <hgroup>
-      <h2>Legal Responsibility</h2>
+      <h2>Section 508</h2>
+    </hgroup>
+    <article>
+		<ul class="build">
+			<li>(a) alt attributes</li>
+			<li>(b) subtitles</li>
+			<li>(c) color</li>
+			<li>(d) stylesheets</li>
+			<li>(e) image maps!</li>
+			<li>(f) seriously, image maps</li>
+			<li>(g) row/column headers</li>
+			<li>(h) data table cells</li>
+		</ul>
+    </article>
+  </slide>
+
+  <slide>
+    <hgroup>
+      <h2>Section 508</h2>
+    </hgroup>
+    <article>
+		<ul class="build">
+			<li>(i) frames</li>
+			<li>(j) blinking</li>
+			<li>(k) text only page
+				<ul class="build">
+					<li>most misunderstood</li>
+				</ul>
+			</li>
+			<li>(l) scripts</li>
+			<li>(m) required plugins</li>
+			<li>(n) form elements</li>
+			<li>(o) skipping navigation</li>
+			<li>(p) timing</li>
+		</ul>
+    </article>
+  </slide>
+
+  <slide>
+    <hgroup>
+      <h2>Standards</h2>
+    </hgroup>
+    <article>
+		<ul class="build">
+			<li>Bobby Approved
+				<ul class="build fade">
+					<li>Where's Bobby?</li>
+					<li>'96 CAST</li>
+					<li>'04 Watchfire</li>
+					<li>'07 IBM</li>
+				</ul>
+			</li>
+			<li>WCAG 2.0
+				<ul class="build">
+					<li>A</li>
+					<li>AA</li>
+					<li>AAA</li>
+				</ul>
+			</li>
+		</ul>
+    </article>
+  </slide>
+
+  <slide class="segue dark nobackground">
+    <hgroup class="auto-fadein">
+      <h2>What is a great accessible <br><br>experience?</h2>
+    </hgroup>
+  </slide>
+
+  <slide>
+    <hgroup>
+      <h2>ChromeVox</h2>
+      <h3>Screen Reader for Developers</h3>
     </hgroup>
     <article>
       <p>A list where items build:</p>
