--- a/accessibility.html
+++ b/accessibility.html
@@ -141,23 +141,123 @@ URL: https://code.google.com/p/io-2012-slides
       <h3>Screen Reader for Developers</h3>
     </hgroup>
     <article>
-      <p>A list where items build:</p>
       <ul class="build">
-        <li>Pressing 'h' highlights code snippets</li>
-        <li>Pressing 'p' toggles speaker notes (if they're on the current slide)</li>
-        <li>Pressing 'f' toggles fullscreen viewing</li>
-        <li>Pressing 'w' toggles widescreen</li>
-        <li>Pressing 'o' toggles overview mode</li>
-        <li>Pressing 'ESC' toggles off these goodies</li>
-      </ul>
-      <p>Another list, but items fade as they build:</p>
-      <ul class="build fade">
-        <li>Hover over me!</li>
-        <li>Hover over me!</li>
-        <li>Hover over me!</li>
+        <li>
+        	<ul>
+				<li>JAWS</li>
+				<li>NVDA</li>
+				<li>VoiceOver</li>
+			</ul>
+        </li>
+        <li>Development tool</li>
       </ul>
     </article>
   </slide>
+  
+  <slide>
+      <hgroup>
+        <h2>Accessibility for the static web</h2>
+      </hgroup>
+	  <article>
+          <style>
+            input {
+              margin-left: 0.5em;
+              font-size: 100%;
+            }
+            select {
+              margin-left: 0.5em;
+              font-size: 100%;
+              vertical-align: middle;
+            }
+          </style>
+		  <p>This is an example of a poorly accessible page from the 90s:</p>
+          <form style="border: 1px solid #696969; padding: 1em; margin-top: 1em;">
+
+            <p>
+              Enter your name:
+              <input type="text" id="username_bad">
+            </p>
+
+            <p>
+              Choose your favorite color:
+              <select id="colorchoice_bad">
+                <option selected="">Red</option>
+                <option>Orange</option>
+                <option>Yellow</option>
+                <option>Green</option>
+                <option>Blue</option>
+                <option>Purple</option>
+                <option>Brown</option>
+                <option>Black</option>
+                <option>Gray</option>
+                <option>White</option>
+              </select>
+            </p>
+          
+            <p>
+              <input type="submit" style="width: 10em;">
+            </p>
+
+            <p>Having trouble?
+               Click <a href="http://www.google.com/">here</a> for help
+            </p>
+
+          </form>
+	  </article>
+  </slide>
+
+  <slide>
+      <hgroup>
+        <h2>Accessibility for the static web</h2>
+      </hgroup>
+	  <article>
+          <style>
+            input {
+              margin-left: 0.5em;
+              font-size: 100%;
+            }
+            select {
+              margin-left: 0.5em;
+              font-size: 100%;
+              vertical-align: middle;
+            }
+          </style>
+		  <p>This is an example of a perfectly accessible page from the 90s:</p>
+          <form style="border: 1px solid #696969; padding: 1em; margin-top: 1em;">
+
+            <p>
+              <label for="username">Enter your name:</label>
+              <input type="text" id="username">
+            </p>
+
+            <p>
+              <label for="colorchoice">Choose your favorite color:</label>
+              <select id="colorchoice">
+                <option selected="">Red</option>
+                <option>Orange</option>
+                <option>Yellow</option>
+                <option>Green</option>
+                <option>Blue</option>
+                <option>Purple</option>
+                <option>Brown</option>
+                <option>Black</option>
+                <option>Gray</option>
+                <option>White</option>
+              </select>
+            </p>
+          
+            <p>
+              <input type="submit" style="width: 10em;">
+            </p>
+
+            <p>Having trouble?
+               <a href="http://www.google.com/">Click here for help</a>
+            </p>
+
+          </form>
+	  </article>
+  </slide>
+
 
   <slide>
     <hgroup>
