added to static auditing

--- a/accessibility.html
+++ b/accessibility.html
@@ -812,6 +812,10 @@ function confirm() {
 				<li>Tests 508 and WCAG 2.0</li>
 				<li>Can't help with internal sites</li>
 			</ul>
+			<p>Other 3rd Party Tools</p>
+			<ul>
+				<li>Dated</li>
+			</ul>
 		</article>
 	</slide>
 
