wave toolbar is for IE, firefox needs the WDT

--- a/accessibility.html
+++ b/accessibility.html
@@ -827,8 +827,9 @@ function confirm() {
 			<ul class="build">
 				<li>Integrated Tools
 					<ul>
-						<li>Wave Toolbar (Firefox)</li>
-						<li>Chrome Accessibility Extension</li>
+						<li>Wave Toolbar (IE)</li>
+						<li>Firefox Web Developer Toolbar</li>
+						<li>Chrome Accessibility Extension (Wed Developer Tools)</li>
 					</ul>
 				</li>
 				<li>These will make you feel better</li>
