--- a/accessibility.html
+++ b/accessibility.html
@@ -20,6 +20,7 @@ URL: https://code.google.com/p/io-2012-slides
   <link rel="stylesheet" media="all" href="theme/css/default.css">
   <link rel="stylesheet" media="only screen and (max-device-width: 480px)" href="theme/css/phone.css">
   <base target="_blank"> <!-- This amazingness opens all links in a new tab. -->
+  <script src="js/jquery.min.js"></script>
   <script data-main="js/slides" src="js/require-1.0.8.min.js"></script>
 	<style>
 .livecontent-src {
@@ -356,7 +357,7 @@ URL: https://code.google.com/p/io-2012-slides
 			<li>(i) frames</li>
 			<li>(j) blinking</li>
 			<li>(k) text only page
-				<ul class="build">
+				<ul>
 					<li>most misunderstood</li>
 				</ul>
 			</li>
@@ -897,12 +898,6 @@ function confirm() {
     <p class="auto-fadein" data-config-contact>
       <!-- populated from slide_config.json -->
     </p>
-  </slide>
-
-  <slide class="logoslide dark nobackground">
-    <article class="flexbox vcenter">
-      <span><img src="images/google_developers_logo_white.png"></span>
-    </article>
   </slide>
 
   <slide class="backdrop"></slide>
