removing aria-valuetext as it seems to break chromevox

--- a/lunch_ax.html
+++ b/lunch_ax.html
@@ -23,7 +23,7 @@
 <html>
 <head>
   <!-- Accessible version -->
-  <title>lunch Attack</title>
+  <title>lunch thingy</title>
   <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Cherry+Cream+Soda" />
   <link rel="stylesheet" type="text/css" href="lunch_styles.css" />
   <script src="js/events.js"></script>
@@ -139,7 +139,7 @@
       caption.innerText = starNames[stars];
       var stars_elem = document.getElementById('stars');
       stars_elem.setAttribute('aria-valuenow', stars);
-      stars_elem.setAttribute('aria-valuetext', starNames[stars]);
+      //stars_elem.setAttribute('aria-valuetext', starNames[stars]);
     }
 
     function starkey(event) {
