moving 'accessible to whom?'

--- a/accessibility.html
+++ b/accessibility.html
@@ -119,6 +119,19 @@ URL: https://code.google.com/p/io-2012-slides
       <p data-config-presenter><!-- populated from slide_config.json --></p>
     </hgroup>
   </slide>
+  
+  <slide>
+    <hgroup>
+      <h2>Accessible to whom?</h2>
+    </hgroup>
+    <article>
+      <ul>
+        <li>Visual imparements</li>
+        <li>Motor and mobility imparements</li>
+        <li>Hearing imparements</li>
+      </ul>
+    </article>
+  </slide>
 
   <slide>
     <hgroup>
@@ -137,6 +150,7 @@ URL: https://code.google.com/p/io-2012-slides
   <slide>
       <hgroup>
         <h2>Accessibility for the static web</h2>
+		<h3>Doing Nothing</h3>
       </hgroup>
 	  <article>
           <style>
@@ -192,6 +206,7 @@ URL: https://code.google.com/p/io-2012-slides
   <slide>
       <hgroup>
         <h2>Accessibility for the static web</h2>
+		<h3>Doing Something</h3>
       </hgroup>
 	  <article>
           <style>
@@ -290,19 +305,6 @@ URL: https://code.google.com/p/io-2012-slides
         <li>Coding accessible HTML5</li>
         <li>Auditing</li>
         <li>Questions and fumbling for answers</li>
-      </ul>
-    </article>
-  </slide>
-
-  <slide>
-    <hgroup>
-      <h2>What is disabled?</h2>
-    </hgroup>
-    <article>
-      <ul>
-        <li>Visual imparements</li>
-        <li>Motor and mobility imparements</li>
-        <li>Hearing imparements</li>
       </ul>
     </article>
   </slide>
