some edits of beginning and ending pages

--- a/accessibility.html
+++ b/accessibility.html
@@ -126,9 +126,9 @@ URL: https://code.google.com/p/io-2012-slides
     </hgroup>
     <article>
       <ul>
-        <li>Visual imparements</li>
-        <li>Motor and mobility imparements</li>
-        <li>Hearing imparements</li>
+        <li>Visual impairements</li>
+        <li>Motor and mobility impairements</li>
+        <li>Hearing impairements</li>
       </ul>
     </article>
   </slide>
@@ -847,7 +847,7 @@ function confirm() {
 					<ul>
 						<li>Wave Toolbar (IE)</li>
 						<li>Firefox Web Developer Toolbar</li>
-						<li>Chrome Accessibility Extension (Wed Developer Tools)</li>
+						<li>Chrome Accessibility Extension (Web Developer Tools)</li>
 					</ul>
 				</li>
 				<li>These will make you feel better</li>
@@ -865,7 +865,7 @@ function confirm() {
 				<li>What you can expect:
 					<ul>
 						<li>Recommendations</li>
-						<li>Audit preferences</li>
+						<li>Strategy!</li>
 					</ul>
 				</li>
 				<li>What you can hope for:
@@ -888,8 +888,9 @@ function confirm() {
 		</hgroup>
 		<article>
 			<ul class="build">
-				<li>I'm not expecting you to get anything out of this...
-					<ul class="build">
+				<li>This wasn't for you!</li>
+				<li>But if you take nothing else away...
+					<ul>
 						<li>Standard tags</li>
 						<li>Descriptions</li>
 						<li>Focus</li>
@@ -947,7 +948,7 @@ function confirm() {
     <aside class="gdbar right"><img src="images/harvard-logo.png"></aside>
     <article class="flexbox vleft auto-fadein">
       <h2>&lt;Thank You!&gt;</h2>
-      <p>A special thank you to: Curtis Wilcox, Ashley Cwikla, Michael Hilborn, Artie Barrett, Shannon Rice, Roderick Morales, and Mildene Bradley</p>
+      <p>A special thank you to: Curtis Wilcox, Ashley Cwikla, Michael Hilborn, Artie Barrett, and Shannon Rice</p>
     </article>
     <p class="auto-fadein" data-config-contact>
       <!-- populated from slide_config.json -->
