adding chat.huit note as well as changing compatability note subtext

--- a/index.html
+++ b/index.html
@@ -792,9 +792,9 @@ function confirm() {
 	<slide>
 		<hgroup>
 			<h2>Compatibility Note</h2>
+			<h3>A little bit about screenreaders</h3>
 		</hgroup>
 		<article>
-			<p>Compatability is a mess!</p>
 			<ul class="build">
 				<li>JAWS (and NVDA)
 					<ul>
@@ -899,6 +899,7 @@ function confirm() {
 				<li>Communicate
 					<ul>
 						<li>Work together</li>
+						<li>chat.huit.harvard.edu -> Accessibility</li>
 					</ul>
 				</li>
 			</ul>
