--- a/index.html
+++ b/index.html
@@ -126,9 +126,9 @@ URL: https://code.google.com/p/io-2012-slides
     </hgroup>
     <article>
       <ul>
-        <li>Visual impairements</li>
-        <li>Motor and mobility impairements</li>
-        <li>Hearing impairements</li>
+        <li>Visual impairments</li>
+        <li>Motor and mobility impairments</li>
+        <li>Hearing impairments</li>
       </ul>
     </article>
   </slide>
